--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "Classes/SSCore"]
 	path = Classes/SSCore
-	url = git@github.com:amazingsyco/sscore.git
+	url = git://github.com/amazingsyco/sscore.git
